--- a/src/main/resources/templates/review.html
+++ b/src/main/resources/templates/review.html
@@ -6,20 +6,27 @@
 <title>Book Review</title>
 </head>
 
+
+<script>
+	function goBack() {
+		window.history.back();
+	}
+</script>
 <body>
 
 	<header>
 		<h1>A Review of-</h1>
 	</header>
-
 	<div th:each="book: ${bookReviewModel}">
 		<img th:src="${book.image}" style="width: 300px; height: 500px"></img>
 		<h2 th:text="${book.BookTitle}"></h2>
 		<h3 th:text="${book.category}"></h3>
-		<h4 th:text="${book.bookReview}"></h4>
-
-		<a href="http://localhost:8080/categories">Back to Category</a>
+		<p th:text="${book.bookReview}"></p>
 	</div>
+	<footer>
+		<!-- <a th:href="@{/category(id=${book.category.id})}">Back to Category</a> -->
+		<button onclick="goBack()">Go Back</button>
+	</footer>
 
 </body>
 </html>
