--- a/src/main/resources/static/css/layout.css
+++ b/src/main/resources/static/css/layout.css
@@ -10,25 +10,35 @@
 
 .container{
 	display:grid;
-	grid-template-columns: 2fr 6fr 2fr;
-	grid-template-rows: auto auto;
+	grid-template-columns: 1fr 3fr 1fr;
+	grid-template-rows: 50px 100vh 50px;
 	grid-gap: var(--gap);
-	margin-top: 65px;
 	width: 100%;
 	padding-left: 1rem;
 	padding-right: 1rem;
 	padding-top: 1rem;
 }
 
-.header, .footer{
+.header{
+	display:flex;
+	justify-content: center;
+	align-self: center;
+	grid-column:1/-1;
+} 
+
+.footer{
 	display: flex;
 	justify-content: center;
+	align-self: center;
 	grid-column:1/-1;
 } 
 
 .review{
 	display:grid;
-	grid-template-columns: 1/2;
+	grid-column:2/3;
+	display:flex;
+	flex-direction: column;
+	align-items: center;
 	grid-gap: var(--gap);
 	
 }
