--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1,13 +1,5 @@
 
 
 body{
-	background: gray;
-}
-
-.footer {
-    border: 2px solid black;
-}
-
-.header {
-    border: 2px solid black;
+	background: radial-gradient(white, lightgray, gray);
 }
