--- a/src/main/resources/templates/genre.html
+++ b/src/main/resources/templates/genre.html
@@ -17,8 +17,8 @@
 			<h1>Book Reviews</h1>
 		</header>
 		
-		<div th:each="bookReview: ${categoryModel}">
-			<ul th:each="books: ${bookReview.books}">
+		<div class="reviewed_books_list" th:each="bookReview: ${categoryModel}">
+			<ul class="listed_stuff" th:each="books: ${bookReview.books}">
 				<li> <a th:href="@{/bookReview(id=${books .id})}" th:text="${books}"></a> </li>
 			</ul>
 		</div>
