--- a/src/main/resources/templates/categoriesList.html
+++ b/src/main/resources/templates/categoriesList.html
@@ -12,13 +12,13 @@
 
 <body>
 
-	<div class="container">
+	<div class="categories_container">
 	
 		<header class="header">
 			<h1>A List of Review Categories</h1>
 		</header>
 
-		<ul th:each="category: ${categoriesModel}">
+		<ul class="categories" th:each="category: ${categoriesModel}">
 			<li> <a th:href="@{/category(id=${category.id})}" th:text="${category.category}"></a> </li>
 		</ul>
 		
