--- a/src/main/resources/templates/review.html
+++ b/src/main/resources/templates/review.html
@@ -18,12 +18,12 @@
 	<div class="container">
 	
 		<header class="header">
-			<h1>A Review of-</h1>
+			<h1>A Review of</h1>
 		</header>
 		
 		<div class="review" th:each="book: ${bookReviewModel}">
-			<img th:src="${book.image}" style="width: 300px; height: 500px"></img>
 			<h2 th:text="${book.BookTitle}"></h2>
+			<img th:src="${book.image}" style="width: 300px; height: 500px"></img>
 			<h3 th:text="${book.category}"></h3>
 			<p th:text="${book.bookReview}"></p>
 		</div>
