--- a/src/main/resources/templates/review.html
+++ b/src/main/resources/templates/review.html
@@ -26,10 +26,16 @@
 			<img th:src="${book.image}" style="width: 300px; height: 500px"></img>
 			<h3 th:text="${book.category}"></h3>
 			<p th:text="${book.bookReview}"></p>
+			<div th:each="tag: ${book.tags}">
+					<a th:href="@{/tag(id=${tag.id})}" th:text="'Tags:' + ${tag}"></a>
+					<form method="POST">
+						<button type="submit" th:value="${tag.id}" name ="id" th:formaction="@{/delete-tag}">Remove</button>
+					</form>
+			</div>
 		</div>
 		
+		
 		<footer class="footer">
-			<!-- <a th:href="@{/category(id=${book.category.id})}">Back to Category</a> -->
 			<button onclick="goBack()">Go Back</button>
 		</footer>
 		
