--- a/src/main/resources/templates/review.html
+++ b/src/main/resources/templates/review.html
@@ -40,7 +40,7 @@
 			</div>
 			
 			<div>
-				<input name="reviewId" type="hidden" th:value="${review.id}" />
+				<input name="id" type="hidden" th:value="${book.id}" />
 			</div>
 			
 			<div>
