--- a/src/main/resources/templates/review.html
+++ b/src/main/resources/templates/review.html
@@ -29,10 +29,15 @@
 			<div th:each="tag: ${book.tags}">
 				<a th:href="@{/tag(id=${tag.id})}" th:text="'Tags:' + ${tag}"></a>
 				<form method="POST">
+					<input name="bookReviewTitle" type="hidden" th:value="${book.bookTitle}" />
 					<button type="submit" th:value="${tag.id}" name="id"
 						th:formaction="@{/delete-tag}">Remove</button>
 				</form>
 			</div>
+			
+			
+			
+			
 			<form method="POST">
 				<h3>Comment Section</h3>
 				<div>
