--- a/src/main/resources/templates/review.html
+++ b/src/main/resources/templates/review.html
@@ -27,12 +27,13 @@
 			<h3 th:text="${book.category}"></h3>
 			<p th:text="${book.bookReview}"></p>
 			<div th:each="tag: ${book.tags}">
+				<div th:id="'tag-'+ ${tag.id}">
 				<a th:href="@{/tag(id=${tag.id})}" th:text="'Tags:' + ${tag}"></a>
-				<form method="POST">
-					<input name="bookReviewTitle" type="hidden" th:value="${book.bookTitle}" />
-					<button type="submit" th:value="${tag.id}" name="id"
-						th:formaction="@{/delete-tag}">Remove</button>
-				</form>
+				<!--   <form method="POST">-->
+					
+					<button type="submit" th:attr="data-id=${tag.id},data-title=${book.BookTitle}" name="id" class="removeTag">Remove</button>
+				<!--  /form>-->
+				</div>
 			</div>
 			
 			
@@ -66,5 +67,6 @@
 		</footer>
 
 	</div>
+	<script src="../js/tag.js"></script>
 </body>
 </html>
