couldnt get add tags hooked up

--- a/src/main/resources/templates/review.html
+++ b/src/main/resources/templates/review.html
@@ -38,7 +38,7 @@
 				</div>
 				
 				<div>
-					<button type="submit" th:attr="data-book-id=${book.id}">Add</button>
+					<button id="addButton" type="submit" th:attr="data-book-id=${book.id}">Add</button>
 				</div>
 				
 			</form>	
