added links in tags page of books by tag

--- a/src/main/resources/static/css/layout.css
+++ b/src/main/resources/static/css/layout.css
@@ -80,3 +80,9 @@
 	justify-content: space-around;
 	align-items: center;
 }
+
+.by_tag_book_list{
+	display: flex;
+	flex-direction: column;
+	justify-content: space-around;
+}
