--- a/src/main/resources/templates/tags.html
+++ b/src/main/resources/templates/tags.html
@@ -24,8 +24,8 @@
 		<div class="review" th:each="tag: ${tagModel}">
 			<h2 th:text="${tag.tag}"></h2>
 			
-			<div th:each="book: ${tag.books}">
-				<p th:text="${book.bookTitle}"></p>
+			<div class="by_tag_book_list" th:each="book: ${tag.books}">
+				<a th:href="@{/bookReview(id=${book.id})}" th:text="${book.bookTitle}"></a>
 				<img th:src="${book.image}" style="width: 300px; height: 500px"></img>
 			</div>
 		</div>
